MDEV-26052 Assertion prebuilt->trx_id < table->def_trx_id failed

ha_innobase::truncate(): If the operation fails, preserve
also dict_table_t::def_trx_id.

This fixes a regression that had been introduced in
commit 1bd681c8b3c5213ce1f7976940a7dc38b48a0d39 (MDEV-25506).